[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "squirrel"
dynamic = ["version"]
dependencies = [
    "biopython>=1.70",
    'tabulate',
    'baltic',
    'matplotlib',
    'mako~=1.3.10',
    'seaborn',
    'pandas~=2.3.1',
    "numpy",
    'scikit-learn==1.7.1',
    "PuLP",
]
authors = [
  { name="Aine OToole", email="aine.otoole@ed.ac.uk" },
]
description = "Some QUIck Reconstruction to Resolve Evolutionary Links"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/aineniamh/squirrel"
Issues = "https://github.com/aineniamh/squirrel/issues"

[project.scripts]
squirrel = "squirrel.command:main"

[tool.setuptools.dynamic]
version = {attr = "squirrel.__version__"}
